--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#000000">
-  <meta name="description" content="Manual Therapy for Wellness provides massage, manual lymphatic drainage, and myofascial release therapies that provide pain relief and increased mobility in soft tissues and joints.">
+  <meta name="description" content="Lymph Dynamics provides lymphatic drainage therapy.">
   <meta name="description" content="Trish Romano has over 17 years experience helping clients of all types, from hard training athletes, to office warriors, to those facing serious illness.">
   <meta name="description" content="Lymphatic Massage Lymphatic Drainage Therapy">
-  <meta name="description" content="Best massage in Scottsdale Arizona">
+  <meta name="description" content="Best lymphatic drainage therapy in Scottsdale Arizona">
   <title><%=htmlWebpackPlugin.options.title%></title>
   <!--
       manifest.json provides metadata used when your web app is added to the
